--- a/Creating _Database.ipynb
+++ b/Creating _Database.ipynb
@@ -42,12 +42,12 @@
     "from spotipy.oauth2 import SpotifyOAuth\n",
     "\n",
     "# Replace with your client ID, client secret, and redirect URI\n",
-    "client_id = '6f11478dbb564508aeaf87955de22cb6'\n",
-    "client_secret = 'df29bc83680d45889368d115410d1c40'\n",
+    "client_id = '***'\n",
+    "client_secret = '***'\n",
     "redirect_uri = 'http://localhost:8888/files/Jupyter%20Notebook%20Projects/my_spotify/callback.html'\n",
     "# Replace with your actual redirect uri\n",
-    "# note that this adress is the only one I have on my app in spotifiy set as uri. \n",
-    "#if you are trying to use it you shuold make your own app or try to mimic this location on your computer\n",
+    "# note that this adress is the one I have on my app in spotifiy set as uri. \n",
+    "#if you are trying to use it you shuold make your own app\n",
     "#use the file \"callback.html\" I have created as your URI \n",
     "scope = 'user-read-private user-read-email playlist-read-private user-top-read'\n",
     "sp_oauth = SpotifyOAuth(client_id=client_id,\n",
